--- a/index.html
+++ b/index.html
@@ -152,7 +152,10 @@
                         Teilen Sie diesen Artikel und lassen Sie andere einen Blick in die Welt des grenzenlosen Luxus werfen. Wer weiß, vielleicht inspiriert er den nächsten Milliardär unter uns! 🏰✨
                     </p>
                     <div class="ads">
+
                         <a href="" class="ad">
+                            <h3>Das könnte Ihnen gefallen</h3>
+                            <div>(Anzeige)</div>
                             <img src="assets/images/2.jpeg" alt="Sie werden nicht glauben, was sie tut, um jeden Monat 27.650 € von zu Hause aus zu verdienen.
                             ">
                             <p>Sie werden nicht glauben, was sie tut, um jeden Monat 27.650 € von zu Hause aus zu verdienen.
