--- a/index.html
+++ b/index.html
@@ -97,13 +97,6 @@
                     <p>Das futuristische Meisterwerk des Architekten Antti Lovag beeindruckt mit 10 blasenförmigen Suiten, drei Pools und einem Amphitheater mit 500 Sitzplätzen. Gerade Linien? Viel zu gewöhnlich. Dieses sci-fi-inspirierte Wunderwerk definiert avantgardistisches Wohnen völlig neu.
                     </p>
 
-                    <a class="ad" href="">
-                        <h3>Das könnte Ihnen gefallen</h3>
-                        <div>(Anzeige)</div>
-                        <img src="assets/images/1.jpeg" alt="girl image on beach">
-                        <p>Sie war Imkerin. Jetzt verdient sie 67.000 € im Monat mit dieser KI-App.</p>
-                    </a>
-
                     <h3>6. Odeon Tower Penthouse – 330 Millionen Dollar</h3>
                     <figure id="post-1196957 media-1196957" class="align-none"><img decoding="async"
                             src="assets/images/1731921154771_publer_io_V8-min.png"
@@ -151,27 +144,6 @@
                     <p>
                         Teilen Sie diesen Artikel und lassen Sie andere einen Blick in die Welt des grenzenlosen Luxus werfen. Wer weiß, vielleicht inspiriert er den nächsten Milliardär unter uns! 🏰✨
                     </p>
-                    <div class="ads">
-
-                        <a href="" class="ad">
-                            <h3>Das könnte Ihnen gefallen</h3>
-                            <div>(Anzeige)</div>
-                            <img src="assets/images/2.jpeg" alt="Sie werden nicht glauben, was sie tut, um jeden Monat 27.650 € von zu Hause aus zu verdienen.
-                            ">
-                            <p>Sie werden nicht glauben, was sie tut, um jeden Monat 27.650 € von zu Hause aus zu verdienen.
-                            </p>
-                        </a>
-                        <a href="" class="ad">
-                            <img src="assets/images/3.jpeg" alt="Nach Trumps Sieg: Das ist die beste Gelegenheit, Geld zu verdienen (und alle steigen ein).
-                            ">
-                            <p>Nach Trumps Sieg: Das ist die beste Gelegenheit, Geld zu verdienen (und alle steigen ein).
-                            </p>
-                        </a>
-                        <a href="" class="ad">
-                            <img src="assets/images/4.jpeg" alt="KI verändert die Welt – und diese Gelegenheit sollten Sie sich nicht entgehen lassen.">
-                            <p>KI verändert die Welt – und diese Gelegenheit sollten Sie sich nicht entgehen lassen.</p>
-                        </a>
-                    </div>
                 </div>
                 <aside>
                     <div class="buy_sell_wow_wrapper">
@@ -296,7 +268,7 @@
         <div class="footer__social-media">
             <a aria-label="Twitter" class="footer__social-media-link" data-detail-element-name="twitter"
             data-interaction-type="footer"
-            href="https://twitter.com/intent/tweet?url=https://clckhq.com&text=Die%2010%20teuersten%20H%C3%A4user%20der%20Welt%20%282024%29"
+            href="https://wussten-schon.com"
             rel="noopener" target="_blank">
                 <svg class="inline-icon inline-icon--small inline-icon--white" viewBox="0 0 24 24">
                     <path
@@ -307,7 +279,7 @@
         
             <a aria-label="Facebook" class="footer__social-media-link" data-detail-element-name="facebook"
             data-interaction-type="footer"
-            href="https://www.facebook.com/sharer/sharer.php?u=https://clckhq.com"
+            href="https://wussten-schon.com"
             rel="noopener" target="_blank">
                 <svg class="inline-icon inline-icon--small inline-icon--white" viewBox="0 0 24 24">
                     <path
@@ -317,7 +289,7 @@
             </a>
         
             <a aria-label="Whatsapp" class="footer__social-media-link" data-detail-element-name="Whatsapp"
-                data-interaction-type="footer" href="https://api.whatsapp.com/send?text=Die%2010%20teuersten%20H%C3%A4user%20der%20Welt%20%282024%29%20https://clckhq.com"
+                data-interaction-type="footer" href="https://wussten-schon.com"
 
                 rel="noopener" target="_blank">
                 <svg class="inline-icon inline-icon--small inline-icon--white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27 106.1 27h.1c122.3 0 224.1-99.6 224.1-222 0-59.3-25.2-115-67.1-157zm-157 341.6c-33.2 0-65.7-8.9-94-25.7l-6.7-4-69.8 18.3L72 359.2l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 56.2 81.2 56.1 130.5 0 101.8-84.9 184.6-186.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7 .9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"/></svg>
