french version without ads

--- a/index.html
+++ b/index.html
@@ -43,106 +43,100 @@
                 <div class="blog-post__text">
 
                     
-                    <h2>Die 10 teuersten Häuser der Welt (2024)</h2>
-                    <p>Schnallen Sie sich an für eine wilde Reise durch Immobilien, die Sie sich fragen lassen, ob Sie
-                        die falsche Karriere gewählt haben. Diese Häuser sind so extravagant, dass sie den Begriff Luxus
-                        neu definieren. Bereit? Tauchen wir ein!
+                    <h2>Les 10 maisons les plus chères du monde (2024)</h2>
+                    <p>Attachez votre ceinture pour un voyage décoiffant dans le monde de l’immobilier qui pourrait bien vous faire regretter votre choix de carrière. Ces maisons sont si extravagantes qu’elles redéfinissent le concept même de luxe. Prêt ? Plongeons ensemble dans cet univers incroyable !
                     </p>
 
-                    <h3>1. Buckingham Palace – 4,9 Milliarden Dollar</h3>
+                    <h3>1. Buckingham Palace – 4,9 milliards de dollars</h3>
                     <figure id="post-1196957 media-1196957" class="align-none"><img decoding="async"
                             src="assets/images/1731921154771_publer_io_V1-min.png"
                             alt="" loading="lazy">
-                        <figcaption><em>Ort: London, Großbritannien</em></figcaption>
+                        <figcaption><em>Localisation : Londres, Royaume-Uni</em></figcaption>
                     </figure>
-                    <p>Das „renovierungsbedürftige“ Zuhause des britischen Monarchen beeindruckt mit unglaublichen 775
-                        Zimmern, darunter 52 königliche Schlafzimmer und 78 Badezimmer. Handy verlegt? Oder vielleicht
-                        gleich die halbe Königsfamilie? Kein Problem – hier gibt es genug Platz!
+                    <p>La résidence "à rénover" du monarque britannique impressionne avec ses 775 pièces, dont 52 chambres royales et 78 salles de bain. Vous avez perdu votre téléphone ? Ou peut-être un membre de la famille royale ? Pas de souci – il y a largement de quoi les retrouver ici !
                     </p>
-                    <p>Ob königliche Zeremonien oder diplomatische Empfänge, alles erstrahlt in majestätischer Pracht.
-                        Aber Achtung: Ein GPS könnte hier wirklich hilfreich sein, um den Weg zur Küche zu finden!
+                    <p>Que ce soit pour des cérémonies royales ou des réceptions diplomatiques, tout respire la majesté. Mais attention : un GPS pourrait bien être utile pour trouver la cuisine !
                     </p>
 
-                    <h3>2. Antilia – 1 Milliarde Dollar</h3>
+                    <h3>2. Antilia – 1 milliard de dollars</h3>
                     <figure id="post-1196957 media-1196957" class="align-none"><img decoding="async"
                             src="assets/images/1731921154771_publer_io_V2-min.png"
                             alt="" loading="lazy">
-                        <figcaption><em>Ort: Mumbai, Indien</em></figcaption>
+                        <figcaption><em>Localisation : Mumbai, Inde</em></figcaption>
                     </figure>
-                    <p>Der 27-stöckige Wolkenkratzer von Mukesh Ambani ist ein wahres Meisterwerk des Luxus. Er verfügt über drei Hubschrauberlandeplätze, sechs Etagen für Parkplätze und ein Kino mit 50 Sitzplätzen. Mit einer Wohnfläche von über 37.000 Quadratmetern könnte man tatsächlich ein GPS benötigen, um den Weg von der Küche zum Fitnessraum zu finden. Es ist, als würde man in den Wolken leben – mit einem eigenen Wettersystem.</p>
+                    <p>Le gratte-ciel de 27 étages de Mukesh Ambani est une véritable œuvre d’art en matière de luxe. Avec trois héliports, six étages de parking et un cinéma de 50 places, c’est un chef-d'œuvre de grandeur. Avec plus de 37 000 mètres carrés de surface habitable, un GPS pourrait également être nécessaire pour aller de la cuisine à la salle de sport. Vivre dans les nuages… avec un microclimat personnalisé !</p>
 
                     <h3>3. Villa Leopolda – 750 Millionen Dollar </h3>
                     <figure id="post-1196957 media-1196957" class="align-none"><img decoding="async"
                             src="assets/images/1731921154771_publer_io_V3-min.png"
                             alt="" loading="lazy">
-                        <figcaption><em>Standort: Französische Riviera, Frankreich</em></figcaption>
+                        <figcaption><em>Localisation : Côte d’Azur, France</em></figcaption>
                     </figure>
-                    <p>18 Hektar pure Opulenz, mit 14 Badezimmern und einem Swimmingpool, der sich perfekt dazu eignet, über das eigene Vermögen nachzudenken. Die prachtvollen Gärten, die von 50 Gärtnern gepflegt werden, lassen keine Zweifel an den königlichen Ambitionen – oder schlichtweg dem außergewöhnlichen Reichtum – dieses Anwesens.
+                    <p>Ce domaine de 18 hectares respire l’opulence avec 14 salles de bain et une piscine parfaite pour méditer sur votre fortune. Ses jardins somptueux, entretenus par 50 jardiniers, rappellent les ambitions royales — ou tout simplement une richesse extraordinaire.
                     </p>
 
-                    <h3>4. Villa Les Cèdres – 450 Millionen Dollar</h3>
+                    <h3>4. Villa Les Cèdres – 450 millions de dollars</h3>
                     <figure id="post-1196957 media-1196957" class="align-none"><img decoding="async"
                             src="assets/images/1731921154771_publer_io_V5-min.png"
                             alt="" loading="lazy">
-                        <figcaption><em>Standort: Saint-Jean-Cap-Ferrat, Frankreich</em></figcaption>
+                        <figcaption><em>Localisation : Saint-Jean-Cap-Ferrat, France</em></figcaption>
                     </figure>
-                    <p>Ein botanisches Paradies mit 15.000 Pflanzen, einem luxuriösen Pferdestall und einem Pool in olympischer Größe. Einst die Residenz von König Leopold II, dient diese Villa heute als „gemütlicher Rückzugsort“ für Milliardäre. Verstecken spielen hat hier definitiv ein neues, elegantes Level erreicht. </p>
+                    <p>Un paradis botanique avec 15 000 plantes, une écurie luxueuse et une piscine olympique. Autrefois résidence du roi Léopold II, cette villa est aujourd’hui un "modeste refuge" pour milliardaires. Jouer à cache-cache ici ? Définitivement une expérience de luxe inégalée !</p>
 
-                    <h3>5. Das Bubble Palace – 390 Millionen Dollar</h3>
+                    <h3>5. Le Palais Bulles – 390 millions de dollars</h3>
                     <figure id="post-1196957 media-1196957" class="align-none"><img decoding="async"
                             src="assets/images/1731921154771_publer_io_V6-min.png"
                             alt="" loading="lazy">
-                        <figcaption><em>Ort: Französische Riviera, Frankreich</em></figcaption>
+                        <figcaption><em>Localisation : Côte d’Azur, France</em></figcaption>
                     </figure>
-                    <p>Das futuristische Meisterwerk des Architekten Antti Lovag beeindruckt mit 10 blasenförmigen Suiten, drei Pools und einem Amphitheater mit 500 Sitzplätzen. Gerade Linien? Viel zu gewöhnlich. Dieses sci-fi-inspirierte Wunderwerk definiert avantgardistisches Wohnen völlig neu.
+                    <p>Cette création futuriste de l’architecte Antti Lovag se distingue par ses 10 suites en forme de bulle, trois piscines et un amphithéâtre de 500 places. Des lignes droites ? Beaucoup trop ordinaires. Ce chef-d’œuvre sci-fi réinvente complètement le logement avant-gardiste.
                     </p>
 
-                    <h3>6. Odeon Tower Penthouse – 330 Millionen Dollar</h3>
+                    <h3>6. Penthouse Odeon Tower – 330 millions de dollars</h3>
                     <figure id="post-1196957 media-1196957" class="align-none"><img decoding="async"
                             src="assets/images/1731921154771_publer_io_V8-min.png"
                             alt="" loading="lazy">
-                        <figcaption><em>Standort: Monaco</em></figcaption>
+                        <figcaption><em>Localisation : Monaco</em></figcaption>
                     </figure>
-                    <p>Ein 35.000 Quadratfuß großes Penthouse mit einem privaten 360-Grad-Infinity-Pool und einer Wasserrutsche. Warum laufen, wenn Sie von einem Luxus in den nächsten rutschen können? Allein die Aussicht könnte Instagram zum Explodieren bringen.</p>
+                    <p>Un penthouse de 3 250 mètres carrés avec une piscine à débordement privée offrant une vue panoramique et… un toboggan aquatique. Pourquoi marcher quand vous pouvez glisser d’un luxe à l’autre ? La vue seule pourrait faire exploser Instagram.</p>
 
-                    <h3>7. The One – 295 Millionen Dollar</h3>
+                    <h3>7. The One – 295 millions de dollars</h3>
                     <figure id="post-1196957 media-1196957" class="align-none"><img decoding="async"
                             src="assets/images/1731921154771_publer_io_V9 (1)-min.png"
                             alt="" loading="lazy">
-                        <figcaption><em>Standort: Bel-Air, Los Angeles</em></figcaption>
+                        <figcaption><em>Localisation : Bel-Air, Los Angeles</em></figcaption>
                     </figure>
-                    <p>Diese Mega-Villa mit unglaublichen 9.750 Quadratmetern Wohnfläche bietet 42 Badezimmer, eine Bowlingbahn und einen Weinkeller für 10.000 Flaschen. Trotz finanzieller Herausforderungen bleibt sie das Sinnbild modernen Luxuslebens.
+                    <p>Avec ses 9 750 mètres carrés habitables, 42 salles de bain, une piste de bowling et une cave à vin pour 10 000 bouteilles, cette méga-villa reste le symbole du luxe moderne, malgré quelques défis financiers.
                     </p>
 
-                    <h3>8. 4 Fairfield Pond – 248 Millionen Dollar</h3>
+                    <h3>8. 4 Fairfield Pond – 248 millions de dollars</h3>
                     <figure id="post-1196957 media-1196957" class="align-none"><img decoding="async"
                             src="assets/images/1731921154771_publer_io_V10-min.png"
                             alt="" loading="lazy">
-                        <figcaption><em>Standort: Hamptons, New York</em></figcaption>
+                        <figcaption><em>Localisation : Hamptons, New York</em></figcaption>
                     </figure>
-                    <p>Ein 63 Hektar großes Anwesen mit 29 Schlafzimmern, 39 Badezimmern und einem eigenen Kraftwerk. Und vergessen Sie nicht die Garage für 100 Autos – denn die Entscheidung, welchen Bugatti man fahren soll, ist schließlich ein echtes Luxusproblem.</p>
+                    <p>Un domaine de 63 hectares avec 29 chambres, 39 salles de bain et sa propre centrale électrique. Sans oublier un garage pouvant accueillir 100 voitures – car choisir entre deux Bugatti est un véritable dilemme de luxe.</p>
 
-                    <h3>9. Ellison Estate – 200 Millionen Dollar</h3>
+                    <h3>9. Ellison Estate – 200 millions de dollars</h3>
                     <figure id="post-1196957 media-1196957" class="align-none"><img decoding="async"
                             src="assets/images/1731921154771_publer_io_V11-min.png"
                             alt="" loading="lazy">
-                        <figcaption><em>Standort: Woodside, Kalifornien</em></figcaption>
+                        <figcaption><em>Localisation : Woodside, Californie</em></figcaption>
                     </figure>
-                    <p>Das 23 Hektar große, japanisch inspirierte Anwesen von Larry Ellison bietet einen künstlich angelegten See und malerische Koi-Teiche. Hier treffen Ruhe und Gelassenheit auf den extravaganten Stil des Silicon Valley.
+                    <p>Inspiré par l’architecture japonaise, ce domaine de 23 hectares appartenant à Larry Ellison comprend un lac artificiel et des étangs à carpes koï. La sérénité rencontre ici l’extravagance de la Silicon Valley.
                     </p>
 
-                    <h3>10. Palazzo di Amore – 195 Millionen Dollar
-                    </h3>
+                    <h3>10. Palazzo di Amore – 195 millions de dollars</h3>
                     <figure id="post-1196957 media-1196957" class="align-none"><img decoding="async"
                             src="assets/images/1731921154771_publer_io_V12-min.png"
                             alt="" loading="lazy">
-                        <figcaption><em>Standort: Beverly Hills, Kalifornien</em></figcaption>
+                        <figcaption><em>Localisation : Beverly Hills, Californie</em></figcaption>
                     </figure>
-                    <p>Mit 12 Schlafzimmern, einem Infinity-Pool für 100 Personen und einem eigenen Weingut setzt diese Villa neue Maßstäbe für Übertreibung. Wer braucht schon Wein aus dem Laden, wenn man seinen eigenen im Garten produzieren kann?
+                    <p>Avec 12 chambres, une piscine à débordement pouvant accueillir 100 personnes et un vignoble privé, cette villa établit de nouveaux standards en matière d’exagération. Qui a besoin d’acheter du vin en magasin quand on peut le produire directement chez soi ?
                     </p>
                     <p style="text-align: center;">--------------------------------------------------------------</p>
                     <p>
-                        Teilen Sie diesen Artikel und lassen Sie andere einen Blick in die Welt des grenzenlosen Luxus werfen. Wer weiß, vielleicht inspiriert er den nächsten Milliardär unter uns! 🏰✨
+                        Partagez cet article et laissez d’autres découvrir le monde du luxe sans limites. Qui sait, il inspirera peut-être le prochain milliardaire parmi nous ! 🏰✨
                     </p>
                 </div>
                 <aside>
