french version wihtout ads completed

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="blog-post__text">
 
                     
-                    <h2>Les 10 maisons les plus chères du monde (2024)</h2>
+                    <h2 style="font-size: 36px !important; line-height: 40px;">Les 10 maisons les plus chères du monde (2024)</h2>
                     <p>Attachez votre ceinture pour un voyage décoiffant dans le monde de l’immobilier qui pourrait bien vous faire regretter votre choix de carrière. Ces maisons sont si extravagantes qu’elles redéfinissent le concept même de luxe. Prêt ? Plongeons ensemble dans cet univers incroyable !
                     </p>
 
