french ad version

--- a/index.html
+++ b/index.html
@@ -92,6 +92,13 @@
                     <p>Cette création futuriste de l’architecte Antti Lovag se distingue par ses 10 suites en forme de bulle, trois piscines et un amphithéâtre de 500 places. Des lignes droites ? Beaucoup trop ordinaires. Ce chef-d’œuvre sci-fi réinvente complètement le logement avant-gardiste.
                     </p>
 
+                    <a class="ad" href="">
+                        <h3>Das könnte Ihnen gefallen</h3>
+                        <div>(Anzeige)</div>
+                        <img src="assets/images/1.jpeg" alt="girl image on beach">
+                        <p>Sie war Imkerin. Jetzt verdient sie 67.000 € im Monat mit dieser KI-App.</p>
+                    </a>
+
                     <h3>6. Penthouse Odeon Tower – 330 millions de dollars</h3>
                     <figure id="post-1196957 media-1196957" class="align-none"><img decoding="async"
                             src="assets/images/1731921154771_publer_io_V8-min.png"
@@ -138,6 +145,28 @@
                     <p>
                         Partagez cet article et laissez d’autres découvrir le monde du luxe sans limites. Qui sait, il inspirera peut-être le prochain milliardaire parmi nous ! 🏰✨
                     </p>
+
+                    <div class="ads">
+
+                        <a href="" class="ad">
+                            <h3>Das könnte Ihnen gefallen</h3>
+                            <div>(Anzeige)</div>
+                            <img src="assets/images/2.jpeg" alt="Sie werden nicht glauben, was sie tut, um jeden Monat 27.650 € von zu Hause aus zu verdienen.
+                            ">
+                            <p>Sie werden nicht glauben, was sie tut, um jeden Monat 27.650 € von zu Hause aus zu verdienen.
+                            </p>
+                        </a>
+                        <a href="" class="ad">
+                            <img src="assets/images/3.jpeg" alt="Nach Trumps Sieg: Das ist die beste Gelegenheit, Geld zu verdienen (und alle steigen ein).
+                            ">
+                            <p>Nach Trumps Sieg: Das ist die beste Gelegenheit, Geld zu verdienen (und alle steigen ein).
+                            </p>
+                        </a>
+                        <a href="" class="ad">
+                            <img src="assets/images/4.jpeg" alt="KI verändert die Welt – und diese Gelegenheit sollten Sie sich nicht entgehen lassen.">
+                            <p>KI verändert die Welt – und diese Gelegenheit sollten Sie sich nicht entgehen lassen.</p>
+                        </a>
+                    </div>
                 </div>
                 <aside>
                     <div class="buy_sell_wow_wrapper">
